--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ body {
   transition: opacity 0.3s ease-in 0.4s;
 }
 
+
+
+/* 
+
+Falta tornar ist responsivo, removendo 2 dos divs quando o ecrã fica pequeno...
+
 @media (max-width: 480px) {
   .container {
     width: 100vw;
@@ -60,4 +66,5 @@ body {
   .panel:nth-of-type(5) {
     display: none;
   }
-}
+} 
+  */
